[gd_scene load_steps=9 format=4 uid="uid://bn83hsijp1cp4"]

[ext_resource type="TileSet" uid="uid://h7n345jie2jq" path="res://resources/game_world_tileset.tres" id="1_fsom3"]
[ext_resource type="Script" uid="uid://ca3f7643ewl1y" path="res://scenes/main_menu/main_menu.gd" id="1_uqeha"]
[ext_resource type="Texture2D" uid="uid://hv1fhm5mn4d0" path="res://assets/art/props/summer_bush.png" id="2_0ebjn"]
[ext_resource type="SpriteFrames" uid="uid://bcrf5xh8ssayo" path="res://resources/player_animations.tres" id="3_ob46e"]
[ext_resource type="AudioStream" uid="uid://b56064dhlaphu" path="res://assets/music/surpass your limits!.mp3" id="5_wem23"]

[sub_resource type="Animation" id="Animation_uqeha"]
resource_name = "game_start"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(80, 128), Vector2(660, 128)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_wem23"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(80, 176)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wem23"]
_data = {
&"RESET": SubResource("Animation_wem23"),
&"game_start": SubResource("Animation_uqeha")
}

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uqeha")

[node name="Parallax2D" type="Parallax2D" parent="."]
repeat_size = Vector2(640, 0)
autoscroll = Vector2(-100, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="Parallax2D"]
tile_map_data = PackedByteArray("AAAAAAAAAQABAAEAAAAAAAEAAQABAAEAAAAAAAIAAQABAAEAAAAAAAMAAQABAAEAAAAAAAQAAQABAAEAAAAAAAUAAQAFAAAAAAAAAAYAAQAFAAEAAAAAAAcAAQABAAEAAAAAAAgAAQAFAAAAAAAAAAkAAQAFAAEAAAAAAAoAAQABAAEAAAAAAAsAAQAFAAAAAAAAAAwAAQAFAAEAAAAAAA0AAQABAAEAAAAAAA4AAQAFAAAAAAAAAA8AAQAFAAEAAAAAABAAAQABAAEAAAAAABEAAQAFAAAAAAAAABIAAQAFAAEAAAAAABUAAQABAAEAAAAAABYAAQABAAEAAAAAABcAAQABAAEAAAABAAAAAQABAAEAAAABAAEAAQABAAEAAAABAAIAAQABAAEAAAABAAMAAQABAAEAAAABAAQAAQABAAEAAAABAAUAAQAFAAAAAAABAAYAAQAFAAEAAAABAAcAAQABAAEAAAABAAgAAQAFAAAAAAABAAkAAQAFAAEAAAABAAoAAQABAAEAAAABAAsAAQAFAAAAAAABAAwAAQAFAAEAAAABAA0AAQABAAEAAAABAA4AAQAFAAAAAAABAA8AAQAFAAEAAAABABAAAQABAAEAAAABABEAAQAFAAAAAAABABIAAQAFAAEAAAABABUAAQABAAEAAAABABYAAQABAAEAAAABABcAAQABAAEAAAACAAAAAQABAAEAAAACAAEAAQABAAEAAAACAAIAAQABAAEAAAACAAMAAQABAAEAAAACAAQAAQABAAEAAAACAAUAAQAFAAAAAAACAAYAAQAFAAEAAAACAAcAAQABAAEAAAACAAgAAQAFAAAAAAACAAkAAQAFAAEAAAACAAoAAQABAAEAAAACAAsAAQAFAAAAAAACAAwAAQAFAAEAAAACAA0AAQABAAEAAAACAA4AAQAFAAAAAAACAA8AAQAFAAEAAAACABAAAQABAAEAAAACABEAAQAFAAAAAAACABIAAQAFAAEAAAACABUAAQABAAEAAAACABYAAQABAAEAAAACABcAAQABAAEAAAADAAAAAQABAAEAAAADAAEAAQABAAEAAAADAAIAAQABAAEAAAADAAMAAQABAAEAAAADAAQAAQABAAEAAAADAAUAAQAFAAAAAAADAAYAAQAFAAEAAAADAAcAAQABAAEAAAADAAgAAQAFAAAAAAADAAkAAQAFAAEAAAADAAoAAQABAAEAAAADAAsAAQAFAAAAAAADAAwAAQAFAAEAAAADAA0AAQABAAEAAAADAA4AAQAFAAAAAAADAA8AAQAFAAEAAAADABAAAQABAAEAAAADABEAAQAFAAAAAAADABIAAQAFAAEAAAADABUAAQABAAEAAAADABYAAQABAAEAAAADABcAAQABAAEAAAAEAAAAAQABAAEAAAAEAAEAAQABAAEAAAAEAAIAAQABAAEAAAAEAAMAAQABAAEAAAAEAAQAAQABAAEAAAAEAAUAAQAFAAAAAAAEAAYAAQAFAAEAAAAEAAcAAQABAAEAAAAEAAgAAQAFAAAAAAAEAAkAAQAFAAEAAAAEAAoAAQABAAEAAAAEAAsAAQAFAAAAAAAEAAwAAQAFAAEAAAAEAA0AAQABAAEAAAAEAA4AAQAFAAAAAAAEAA8AAQAFAAEAAAAEABAAAQABAAEAAAAEABEAAQAFAAAAAAAEABIAAQAFAAEAAAAEABUAAQABAAEAAAAEABYAAQABAAEAAAAEABcAAQABAAEAAAAFAAAAAQABAAEAAAAFAAEAAQABAAEAAAAFAAIAAQABAAEAAAAFAAMAAQABAAEAAAAFAAQAAQABAAEAAAAFAAUAAQAFAAAAAAAFAAYAAQAFAAEAAAAFAAcAAQABAAEAAAAFAAgAAQAFAAAAAAAFAAkAAQAFAAEAAAAFAAoAAQABAAEAAAAFAAsAAQAFAAAAAAAFAAwAAQAFAAEAAAAFAA0AAQABAAEAAAAFAA4AAQAFAAAAAAAFAA8AAQAFAAEAAAAFABAAAQABAAEAAAAFABEAAQAFAAAAAAAFABIAAQAFAAEAAAAFABUAAQABAAEAAAAFABYAAQABAAEAAAAFABcAAQABAAEAAAAGAAAAAQABAAEAAAAGAAEAAQABAAEAAAAGAAIAAQABAAEAAAAGAAMAAQABAAEAAAAGAAQAAQABAAEAAAAGAAUAAQAFAAAAAAAGAAYAAQAFAAEAAAAGAAcAAQABAAEAAAAGAAgAAQAFAAAAAAAGAAkAAQAFAAEAAAAGAAoAAQABAAEAAAAGAAsAAQAFAAAAAAAGAAwAAQAFAAEAAAAGAA0AAQABAAEAAAAGAA4AAQAFAAAAAAAGAA8AAQAFAAEAAAAGABAAAQABAAEAAAAGABEAAQAFAAAAAAAGABIAAQAFAAEAAAAGABUAAQABAAEAAAAGABYAAQABAAEAAAAGABcAAQABAAEAAAAHAAAAAQABAAEAAAAHAAEAAQABAAEAAAAHAAIAAQABAAEAAAAHAAMAAQABAAEAAAAHAAQAAQABAAEAAAAHAAUAAQAFAAAAAAAHAAYAAQAFAAEAAAAHAAcAAQABAAEAAAAHAAgAAQAFAAAAAAAHAAkAAQAFAAEAAAAHAAoAAQABAAEAAAAHAAsAAQAFAAAAAAAHAAwAAQAFAAEAAAAHAA0AAQABAAEAAAAHAA4AAQAFAAAAAAAHAA8AAQAFAAEAAAAHABAAAQABAAEAAAAHABEAAQAFAAAAAAAHABIAAQAFAAEAAAAHABUAAQABAAEAAAAHABYAAQABAAEAAAAHABcAAQABAAEAAAAIAAAAAQABAAEAAAAIAAEAAQABAAEAAAAIAAIAAQABAAEAAAAIAAMAAQABAAEAAAAIAAQAAQABAAEAAAAIAAUAAQAFAAAAAAAIAAYAAQAFAAEAAAAIAAcAAQABAAEAAAAIAAgAAQAFAAAAAAAIAAkAAQAFAAEAAAAIAAoAAQABAAEAAAAIAAsAAQAFAAAAAAAIAAwAAQAFAAEAAAAIAA0AAQABAAEAAAAIAA4AAQAFAAAAAAAIAA8AAQAFAAEAAAAIABAAAQABAAEAAAAIABEAAQAFAAAAAAAIABIAAQAFAAEAAAAIABUAAQABAAEAAAAIABYAAQABAAEAAAAIABcAAQABAAEAAAAJAAAAAQABAAEAAAAJAAEAAQABAAEAAAAJAAIAAQABAAEAAAAJAAMAAQABAAEAAAAJAAQAAQABAAEAAAAJAAUAAQAFAAAAAAAJAAYAAQAFAAEAAAAJAAcAAQABAAEAAAAJAAgAAQAFAAAAAAAJAAkAAQAFAAEAAAAJAAoAAQABAAEAAAAJAAsAAQAFAAAAAAAJAAwAAQAFAAEAAAAJAA0AAQABAAEAAAAJAA4AAQAFAAAAAAAJAA8AAQAFAAEAAAAJABAAAQABAAEAAAAJABEAAQAFAAAAAAAJABIAAQAFAAEAAAAJABUAAQABAAEAAAAJABYAAQABAAEAAAAJABcAAQABAAEAAAAKAAAAAQABAAEAAAAKAAEAAQABAAEAAAAKAAIAAQABAAEAAAAKAAMAAQABAAEAAAAKAAQAAQABAAEAAAAKAAUAAQAFAAAAAAAKAAYAAQAFAAEAAAAKAAcAAQABAAEAAAAKAAgAAQAFAAAAAAAKAAkAAQAFAAEAAAAKAAoAAQABAAEAAAAKAAsAAQAFAAAAAAAKAAwAAQAFAAEAAAAKAA0AAQABAAEAAAAKAA4AAQAFAAAAAAAKAA8AAQAFAAEAAAAKABAAAQABAAEAAAAKABEAAQAFAAAAAAAKABIAAQAFAAEAAAAKABUAAQABAAEAAAAKABYAAQABAAEAAAAKABcAAQABAAEAAAALAAAAAQABAAEAAAALAAEAAQABAAEAAAALAAIAAQABAAEAAAALAAMAAQABAAEAAAALAAQAAQABAAEAAAALAAUAAQAFAAAAAAALAAYAAQAFAAEAAAALAAcAAQABAAEAAAALAAgAAQAFAAAAAAALAAkAAQAFAAEAAAALAAoAAQABAAEAAAALAAsAAQAFAAAAAAALAAwAAQAFAAEAAAALAA0AAQABAAEAAAALAA4AAQAFAAAAAAALAA8AAQAFAAEAAAALABAAAQABAAEAAAALABEAAQAFAAAAAAALABIAAQAFAAEAAAALABUAAQABAAEAAAALABYAAQABAAEAAAALABcAAQABAAEAAAAMAAAAAQABAAEAAAAMAAEAAQABAAEAAAAMAAIAAQABAAEAAAAMAAMAAQABAAEAAAAMAAQAAQABAAEAAAAMAAUAAQAFAAAAAAAMAAYAAQAFAAEAAAAMAAcAAQABAAEAAAAMAAgAAQAFAAAAAAAMAAkAAQAFAAEAAAAMAAoAAQABAAEAAAAMAAsAAQAFAAAAAAAMAAwAAQAFAAEAAAAMAA0AAQABAAEAAAAMAA4AAQAFAAAAAAAMAA8AAQAFAAEAAAAMABAAAQABAAEAAAAMABEAAQAFAAAAAAAMABIAAQAFAAEAAAAMABUAAQABAAEAAAAMABYAAQABAAEAAAAMABcAAQABAAEAAAANAAAAAQABAAEAAAANAAEAAQABAAEAAAANAAIAAQABAAEAAAANAAMAAQABAAEAAAANAAQAAQABAAEAAAANAAUAAQAFAAAAAAANAAYAAQAFAAEAAAANAAcAAQABAAEAAAANAAgAAQAFAAAAAAANAAkAAQAFAAEAAAANAAoAAQABAAEAAAANAAsAAQAFAAAAAAANAAwAAQAFAAEAAAANAA0AAQABAAEAAAANAA4AAQAFAAAAAAANAA8AAQAFAAEAAAANABAAAQABAAEAAAANABEAAQAFAAAAAAANABIAAQAFAAEAAAANABUAAQABAAEAAAANABYAAQABAAEAAAANABcAAQABAAEAAAAOAAAAAQABAAEAAAAOAAEAAQABAAEAAAAOAAIAAQABAAEAAAAOAAMAAQABAAEAAAAOAAQAAQABAAEAAAAOAAUAAQAFAAAAAAAOAAYAAQAFAAEAAAAOAAcAAQABAAEAAAAOAAgAAQAFAAAAAAAOAAkAAQAFAAEAAAAOAAoAAQABAAEAAAAOAAsAAQAFAAAAAAAOAAwAAQAFAAEAAAAOAA0AAQABAAEAAAAOAA4AAQAFAAAAAAAOAA8AAQAFAAEAAAAOABAAAQABAAEAAAAOABEAAQAFAAAAAAAOABIAAQAFAAEAAAAOABUAAQABAAEAAAAOABYAAQABAAEAAAAOABcAAQABAAEAAAAPAAAAAQABAAEAAAAPAAEAAQABAAEAAAAPAAIAAQABAAEAAAAPAAMAAQABAAEAAAAPAAQAAQABAAEAAAAPAAUAAQAFAAAAAAAPAAYAAQAFAAEAAAAPAAcAAQABAAEAAAAPAAgAAQAFAAAAAAAPAAkAAQAFAAEAAAAPAAoAAQABAAEAAAAPAAsAAQAFAAAAAAAPAAwAAQAFAAEAAAAPAA0AAQABAAEAAAAPAA4AAQAFAAAAAAAPAA8AAQAFAAEAAAAPABAAAQABAAEAAAAPABEAAQAFAAAAAAAPABIAAQAFAAEAAAAPABUAAQABAAEAAAAPABYAAQABAAEAAAAPABcAAQABAAEAAAAQAAAAAQABAAEAAAAQAAEAAQABAAEAAAAQAAIAAQABAAEAAAAQAAMAAQABAAEAAAAQAAQAAQABAAEAAAAQAAUAAQAFAAAAAAAQAAYAAQAFAAEAAAAQAAcAAQABAAEAAAAQAAgAAQAFAAAAAAAQAAkAAQAFAAEAAAAQAAoAAQABAAEAAAAQAAsAAQAFAAAAAAAQAAwAAQAFAAEAAAAQAA0AAQABAAEAAAAQAA4AAQAFAAAAAAAQAA8AAQAFAAEAAAAQABAAAQABAAEAAAAQABEAAQAFAAAAAAAQABIAAQAFAAEAAAAQABUAAQABAAEAAAAQABYAAQABAAEAAAAQABcAAQABAAEAAAARAAAAAQABAAEAAAARAAEAAQABAAEAAAARAAIAAQABAAEAAAARAAMAAQABAAEAAAARAAQAAQABAAEAAAARAAUAAQAFAAAAAAARAAYAAQAFAAEAAAARAAcAAQABAAEAAAARAAgAAQAFAAAAAAARAAkAAQAFAAEAAAARAAoAAQABAAEAAAARAAsAAQAFAAAAAAARAAwAAQAFAAEAAAARAA0AAQABAAEAAAARAA4AAQAFAAAAAAARAA8AAQAFAAEAAAARABAAAQABAAEAAAARABEAAQAFAAAAAAARABIAAQAFAAEAAAARABUAAQABAAEAAAARABYAAQABAAEAAAARABcAAQABAAEAAAASAAAAAQABAAEAAAASAAEAAQABAAEAAAASAAIAAQABAAEAAAASAAMAAQABAAEAAAASAAQAAQABAAEAAAASAAUAAQAFAAAAAAASAAYAAQAFAAEAAAASAAcAAQABAAEAAAASAAgAAQAFAAAAAAASAAkAAQAFAAEAAAASAAoAAQABAAEAAAASAAsAAQAFAAAAAAASAAwAAQAFAAEAAAASAA0AAQABAAEAAAASAA4AAQAFAAAAAAASAA8AAQAFAAEAAAASABAAAQABAAEAAAASABEAAQAFAAAAAAASABIAAQAFAAEAAAASABUAAQABAAEAAAASABYAAQABAAEAAAASABcAAQABAAEAAAATAAAAAQABAAEAAAATAAEAAQABAAEAAAATAAIAAQABAAEAAAATAAMAAQABAAEAAAATAAQAAQABAAEAAAATAAUAAQAFAAAAAAATAAYAAQAFAAEAAAATAAcAAQABAAEAAAATAAgAAQAFAAAAAAATAAkAAQAFAAEAAAATAAoAAQABAAEAAAATAAsAAQAFAAAAAAATAAwAAQAFAAEAAAATAA0AAQABAAEAAAATAA4AAQAFAAAAAAATAA8AAQAFAAEAAAATABAAAQABAAEAAAATABEAAQAFAAAAAAATABIAAQAFAAEAAAATABUAAQABAAEAAAATABYAAQABAAEAAAATABcAAQABAAEAAAAUAAAAAQABAAEAAAAUAAEAAQABAAEAAAAUAAIAAQABAAEAAAAUAAMAAQABAAEAAAAUAAQAAQABAAEAAAAUAAUAAQAFAAAAAAAUAAYAAQAFAAEAAAAUAAcAAQABAAEAAAAUAAgAAQAFAAAAAAAUAAkAAQAFAAEAAAAUAAoAAQABAAEAAAAUAAsAAQAFAAAAAAAUAAwAAQAFAAEAAAAUAA0AAQABAAEAAAAUAA4AAQAFAAAAAAAUAA8AAQAFAAEAAAAUABAAAQABAAEAAAAUABEAAQAFAAAAAAAUABIAAQAFAAEAAAAUABUAAQABAAEAAAAUABYAAQABAAEAAAAUABcAAQABAAEAAAAVAAAAAQABAAEAAAAVAAEAAQABAAEAAAAVAAIAAQABAAEAAAAVAAMAAQABAAEAAAAVAAQAAQABAAEAAAAVAAUAAQAFAAAAAAAVAAYAAQAFAAEAAAAVAAcAAQABAAEAAAAVAAgAAQAFAAAAAAAVAAkAAQAFAAEAAAAVAAoAAQABAAEAAAAVAAsAAQAFAAAAAAAVAAwAAQAFAAEAAAAVAA0AAQABAAEAAAAVAA4AAQAFAAAAAAAVAA8AAQAFAAEAAAAVABAAAQABAAEAAAAVABEAAQAFAAAAAAAVABIAAQAFAAEAAAAVABUAAQABAAEAAAAVABYAAQABAAEAAAAVABcAAQABAAEAAAAWAAAAAQABAAEAAAAWAAEAAQABAAEAAAAWAAIAAQABAAEAAAAWAAMAAQABAAEAAAAWAAQAAQABAAEAAAAWAAUAAQAFAAAAAAAWAAYAAQAFAAEAAAAWAAcAAQABAAEAAAAWAAgAAQAFAAAAAAAWAAkAAQAFAAEAAAAWAAoAAQABAAEAAAAWAAsAAQAFAAAAAAAWAAwAAQAFAAEAAAAWAA0AAQABAAEAAAAWAA4AAQAFAAAAAAAWAA8AAQAFAAEAAAAWABAAAQABAAEAAAAWABEAAQAFAAAAAAAWABIAAQAFAAEAAAAWABUAAQABAAEAAAAWABYAAQABAAEAAAAWABcAAQABAAEAAAAXAAAAAQABAAEAAAAXAAEAAQABAAEAAAAXAAIAAQABAAEAAAAXAAMAAQABAAEAAAAXAAQAAQABAAEAAAAXAAUAAQAFAAAAAAAXAAYAAQAFAAEAAAAXAAcAAQABAAEAAAAXAAgAAQAFAAAAAAAXAAkAAQAFAAEAAAAXAAoAAQABAAEAAAAXAAsAAQAFAAAAAAAXAAwAAQAFAAEAAAAXAA0AAQABAAEAAAAXAA4AAQAFAAAAAAAXAA8AAQAFAAEAAAAXABAAAQABAAEAAAAXABEAAQAFAAAAAAAXABIAAQAFAAEAAAAXABUAAQABAAEAAAAXABYAAQABAAEAAAAXABcAAQABAAEAAAAYAAAAAQABAAEAAAAYAAEAAQABAAEAAAAYAAIAAQABAAEAAAAYAAMAAQABAAEAAAAYAAQAAQABAAEAAAAYAAUAAQAFAAAAAAAYAAYAAQAFAAEAAAAYAAcAAQABAAEAAAAYAAgAAQAFAAAAAAAYAAkAAQAFAAEAAAAYAAoAAQABAAEAAAAYAAsAAQAFAAAAAAAYAAwAAQAFAAEAAAAYAA0AAQABAAEAAAAYAA4AAQAFAAAAAAAYAA8AAQAFAAEAAAAYABAAAQABAAEAAAAYABEAAQAFAAAAAAAYABIAAQAFAAEAAAAYABUAAQABAAEAAAAYABYAAQABAAEAAAAYABcAAQABAAEAAAAZAAAAAQABAAEAAAAZAAEAAQABAAEAAAAZAAIAAQABAAEAAAAZAAMAAQABAAEAAAAZAAQAAQABAAEAAAAZAAUAAQAFAAAAAAAZAAYAAQAFAAEAAAAZAAcAAQABAAEAAAAZAAgAAQAFAAAAAAAZAAkAAQAFAAEAAAAZAAoAAQABAAEAAAAZAAsAAQAFAAAAAAAZAAwAAQAFAAEAAAAZAA0AAQABAAEAAAAZAA4AAQAFAAAAAAAZAA8AAQAFAAEAAAAZABAAAQABAAEAAAAZABEAAQAFAAAAAAAZABIAAQAFAAEAAAAZABUAAQABAAEAAAAZABYAAQABAAEAAAAZABcAAQABAAEAAAAaAAAAAQABAAEAAAAaAAEAAQABAAEAAAAaAAIAAQABAAEAAAAaAAMAAQABAAEAAAAaAAQAAQABAAEAAAAaAAUAAQAFAAAAAAAaAAYAAQAFAAEAAAAaAAcAAQABAAEAAAAaAAgAAQAFAAAAAAAaAAkAAQAFAAEAAAAaAAoAAQABAAEAAAAaAAsAAQAFAAAAAAAaAAwAAQAFAAEAAAAaAA0AAQABAAEAAAAaAA4AAQAFAAAAAAAaAA8AAQAFAAEAAAAaABAAAQABAAEAAAAaABEAAQAFAAAAAAAaABIAAQAFAAEAAAAaABUAAQABAAEAAAAaABYAAQABAAEAAAAaABcAAQABAAEAAAAbAAAAAQABAAEAAAAbAAEAAQABAAEAAAAbAAIAAQABAAEAAAAbAAMAAQABAAEAAAAbAAQAAQABAAEAAAAbAAUAAQAFAAAAAAAbAAYAAQAFAAEAAAAbAAcAAQABAAEAAAAbAAgAAQAFAAAAAAAbAAkAAQAFAAEAAAAbAAoAAQABAAEAAAAbAAsAAQAFAAAAAAAbAAwAAQAFAAEAAAAbAA0AAQABAAEAAAAbAA4AAQAFAAAAAAAbAA8AAQAFAAEAAAAbABAAAQABAAEAAAAbABEAAQAFAAAAAAAbABIAAQAFAAEAAAAbABUAAQABAAEAAAAbABYAAQABAAEAAAAbABcAAQABAAEAAAAcAAAAAQABAAEAAAAcAAEAAQABAAEAAAAcAAIAAQABAAEAAAAcAAMAAQABAAEAAAAcAAQAAQABAAEAAAAcAAUAAQAFAAAAAAAcAAYAAQAFAAEAAAAcAAcAAQABAAEAAAAcAAgAAQAFAAAAAAAcAAkAAQAFAAEAAAAcAAoAAQABAAEAAAAcAAsAAQAFAAAAAAAcAAwAAQAFAAEAAAAcAA0AAQABAAEAAAAcAA4AAQAFAAAAAAAcAA8AAQAFAAEAAAAcABAAAQABAAEAAAAcABEAAQAFAAAAAAAcABIAAQAFAAEAAAAcABUAAQABAAEAAAAcABYAAQABAAEAAAAcABcAAQABAAEAAAAdAAAAAQABAAEAAAAdAAEAAQABAAEAAAAdAAIAAQABAAEAAAAdAAMAAQABAAEAAAAdAAQAAQABAAEAAAAdAAUAAQAFAAAAAAAdAAYAAQAFAAEAAAAdAAcAAQABAAEAAAAdAAgAAQAFAAAAAAAdAAkAAQAFAAEAAAAdAAoAAQABAAEAAAAdAAsAAQAFAAAAAAAdAAwAAQAFAAEAAAAdAA0AAQABAAEAAAAdAA4AAQAFAAAAAAAdAA8AAQAFAAEAAAAdABAAAQABAAEAAAAdABEAAQAFAAAAAAAdABIAAQAFAAEAAAAdABUAAQABAAEAAAAdABYAAQABAAEAAAAdABcAAQABAAEAAAAeAAAAAQABAAEAAAAeAAEAAQABAAEAAAAeAAIAAQABAAEAAAAeAAMAAQABAAEAAAAeAAQAAQABAAEAAAAeAAUAAQAFAAAAAAAeAAYAAQAFAAEAAAAeAAcAAQABAAEAAAAeAAgAAQAFAAAAAAAeAAkAAQAFAAEAAAAeAAoAAQABAAEAAAAeAAsAAQAFAAAAAAAeAAwAAQAFAAEAAAAeAA0AAQABAAEAAAAeAA4AAQAFAAAAAAAeAA8AAQAFAAEAAAAeABAAAQABAAEAAAAeABEAAQAFAAAAAAAeABIAAQAFAAEAAAAeABUAAQABAAEAAAAeABYAAQABAAEAAAAeABcAAQABAAEAAAAfAAAAAQABAAEAAAAfAAEAAQABAAEAAAAfAAIAAQABAAEAAAAfAAMAAQABAAEAAAAfAAQAAQABAAEAAAAfAAUAAQAFAAAAAAAfAAYAAQAFAAEAAAAfAAcAAQABAAEAAAAfAAgAAQAFAAAAAAAfAAkAAQAFAAEAAAAfAAoAAQABAAEAAAAfAAsAAQAFAAAAAAAfAAwAAQAFAAEAAAAfAA0AAQABAAEAAAAfAA4AAQAFAAAAAAAfAA8AAQAFAAEAAAAfABAAAQABAAEAAAAfABEAAQAFAAAAAAAfABIAAQAFAAEAAAAfABUAAQABAAEAAAAfABYAAQABAAEAAAAfABcAAQABAAEAAAAgAAAAAQABAAEAAAAgAAEAAQABAAEAAAAgAAIAAQABAAEAAAAgAAMAAQABAAEAAAAgAAQAAQABAAEAAAAgAAUAAQAFAAAAAAAgAAYAAQAFAAEAAAAgAAcAAQABAAEAAAAgAAgAAQAFAAAAAAAgAAkAAQAFAAEAAAAgAAoAAQABAAEAAAAgAAsAAQAFAAAAAAAgAAwAAQAFAAEAAAAgAA0AAQABAAEAAAAgAA4AAQAFAAAAAAAgAA8AAQAFAAEAAAAgABAAAQABAAEAAAAgABEAAQAFAAAAAAAgABIAAQAFAAEAAAAgABUAAQABAAEAAAAgABYAAQABAAEAAAAgABcAAQABAAEAAAAhAAAAAQABAAEAAAAhAAEAAQABAAEAAAAhAAIAAQABAAEAAAAhAAMAAQABAAEAAAAhAAQAAQABAAEAAAAhAAUAAQAFAAAAAAAhAAYAAQAFAAEAAAAhAAcAAQABAAEAAAAhAAgAAQAFAAAAAAAhAAkAAQAFAAEAAAAhAAoAAQABAAEAAAAhAAsAAQAFAAAAAAAhAAwAAQAFAAEAAAAhAA0AAQABAAEAAAAhAA4AAQAFAAAAAAAhAA8AAQAFAAEAAAAhABAAAQABAAEAAAAhABEAAQAFAAAAAAAhABIAAQAFAAEAAAAhABUAAQABAAEAAAAhABYAAQABAAEAAAAhABcAAQABAAEAAAAiAAAAAQABAAEAAAAiAAEAAQABAAEAAAAiAAIAAQABAAEAAAAiAAMAAQABAAEAAAAiAAQAAQABAAEAAAAiAAUAAQAFAAAAAAAiAAYAAQAFAAEAAAAiAAcAAQABAAEAAAAiAAgAAQAFAAAAAAAiAAkAAQAFAAEAAAAiAAoAAQABAAEAAAAiAAsAAQAFAAAAAAAiAAwAAQAFAAEAAAAiAA0AAQABAAEAAAAiAA4AAQAFAAAAAAAiAA8AAQAFAAEAAAAiABAAAQABAAEAAAAiABEAAQAFAAAAAAAiABIAAQAFAAEAAAAiABUAAQABAAEAAAAiABYAAQABAAEAAAAiABcAAQABAAEAAAAjAAAAAQABAAEAAAAjAAEAAQABAAEAAAAjAAIAAQABAAEAAAAjAAMAAQABAAEAAAAjAAQAAQABAAEAAAAjAAUAAQAFAAAAAAAjAAYAAQAFAAEAAAAjAAcAAQABAAEAAAAjAAgAAQAFAAAAAAAjAAkAAQAFAAEAAAAjAAoAAQABAAEAAAAjAAsAAQAFAAAAAAAjAAwAAQAFAAEAAAAjAA0AAQABAAEAAAAjAA4AAQAFAAAAAAAjAA8AAQAFAAEAAAAjABAAAQABAAEAAAAjABEAAQAFAAAAAAAjABIAAQAFAAEAAAAjABUAAQABAAEAAAAjABYAAQABAAEAAAAjABcAAQABAAEAAAAkAAAAAQABAAEAAAAkAAEAAQABAAEAAAAkAAIAAQABAAEAAAAkAAMAAQABAAEAAAAkAAQAAQABAAEAAAAkAAUAAQAFAAAAAAAkAAYAAQAFAAEAAAAkAAcAAQABAAEAAAAkAAgAAQAFAAAAAAAkAAkAAQAFAAEAAAAkAAoAAQABAAEAAAAkAAsAAQAFAAAAAAAkAAwAAQAFAAEAAAAkAA0AAQABAAEAAAAkAA4AAQAFAAAAAAAkAA8AAQAFAAEAAAAkABAAAQABAAEAAAAkABEAAQAFAAAAAAAkABIAAQAFAAEAAAAkABUAAQABAAEAAAAkABYAAQABAAEAAAAkABcAAQABAAEAAAAlAAAAAQABAAEAAAAlAAEAAQABAAEAAAAlAAIAAQABAAEAAAAlAAMAAQABAAEAAAAlAAQAAQABAAEAAAAlAAUAAQAFAAAAAAAlAAYAAQAFAAEAAAAlAAcAAQABAAEAAAAlAAgAAQAFAAAAAAAlAAkAAQAFAAEAAAAlAAoAAQABAAEAAAAlAAsAAQAFAAAAAAAlAAwAAQAFAAEAAAAlAA0AAQABAAEAAAAlAA4AAQAFAAAAAAAlAA8AAQAFAAEAAAAlABAAAQABAAEAAAAlABEAAQAFAAAAAAAlABIAAQAFAAEAAAAlABUAAQABAAEAAAAlABYAAQABAAEAAAAlABcAAQABAAEAAAAmAAAAAQABAAEAAAAmAAEAAQABAAEAAAAmAAIAAQABAAEAAAAmAAMAAQABAAEAAAAmAAQAAQABAAEAAAAmAAUAAQAFAAAAAAAmAAYAAQAFAAEAAAAmAAcAAQABAAEAAAAmAAgAAQAFAAAAAAAmAAkAAQAFAAEAAAAmAAoAAQABAAEAAAAmAAsAAQAFAAAAAAAmAAwAAQAFAAEAAAAmAA0AAQABAAEAAAAmAA4AAQAFAAAAAAAmAA8AAQAFAAEAAAAmABAAAQABAAEAAAAmABEAAQAFAAAAAAAmABIAAQAFAAEAAAAmABUAAQABAAEAAAAmABYAAQABAAEAAAAmABcAAQABAAEAAAAnAAAAAQABAAEAAAAnAAEAAQABAAEAAAAnAAIAAQABAAEAAAAnAAMAAQABAAEAAAAnAAQAAQABAAEAAAAnAAUAAQAFAAAAAAAnAAYAAQAFAAEAAAAnAAcAAQABAAEAAAAnAAgAAQAFAAAAAAAnAAkAAQAFAAEAAAAnAAoAAQABAAEAAAAnAAsAAQAFAAAAAAAnAAwAAQAFAAEAAAAnAA0AAQABAAEAAAAnAA4AAQAFAAAAAAAnAA8AAQAFAAEAAAAnABAAAQABAAEAAAAnABEAAQAFAAAAAAAnABIAAQAFAAEAAAAnABUAAQABAAEAAAAnABYAAQABAAEAAAAnABcAAQABAAEAAAAjABMAAQABAAEAAAAjABQAAQABAAEAAAAkABMAAQABAAEAAAAkABQAAQABAAEAAAAlABMAAQABAAEAAAAlABQAAQABAAEAAAAmABMAAQABAAEAAAAmABQAAQABAAEAAAAnABMAAQABAAEAAAAnABQAAQABAAEAAAAAABMAAQABAAEAAAAAABQAAQABAAEAAAABABMAAQABAAEAAAABABQAAQABAAEAAAACABMAAQABAAEAAAACABQAAQABAAEAAAADABMAAQABAAEAAAADABQAAQABAAEAAAAEABMAAQABAAEAAAAEABQAAQABAAEAAAAFABMAAQABAAEAAAAFABQAAQABAAEAAAAGABMAAQABAAEAAAAGABQAAQABAAEAAAAHABMAAQABAAEAAAAHABQAAQABAAEAAAAIABMAAQABAAEAAAAIABQAAQABAAEAAAAJABMAAQABAAEAAAAJABQAAQABAAEAAAAKABMAAQABAAEAAAAKABQAAQABAAEAAAALABMAAQABAAEAAAALABQAAQABAAEAAAAMABMAAQABAAEAAAAMABQAAQABAAEAAAANABMAAQABAAEAAAANABQAAQABAAEAAAAOABMAAQABAAEAAAAOABQAAQABAAEAAAAPABMAAQABAAEAAAAPABQAAQABAAEAAAAQABMAAQABAAEAAAAQABQAAQABAAEAAAARABMAAQABAAEAAAARABQAAQABAAEAAAASABMAAQABAAEAAAASABQAAQABAAEAAAATABMAAQABAAEAAAATABQAAQABAAEAAAAUABMAAQABAAEAAAAUABQAAQABAAEAAAAVABMAAQABAAEAAAAVABQAAQABAAEAAAAWABMAAQABAAEAAAAWABQAAQABAAEAAAAXABMAAQABAAEAAAAXABQAAQABAAEAAAAYABMAAQABAAEAAAAYABQAAQABAAEAAAAZABMAAQABAAEAAAAZABQAAQABAAEAAAAaABMAAQABAAEAAAAaABQAAQABAAEAAAAbABMAAQABAAEAAAAbABQAAQABAAEAAAAcABMAAQABAAEAAAAcABQAAQABAAEAAAAdABMAAQABAAEAAAAdABQAAQABAAEAAAAeABMAAQABAAEAAAAeABQAAQABAAEAAAAfABMAAQABAAEAAAAfABQAAQABAAEAAAAgABMAAQABAAEAAAAgABQAAQABAAEAAAAhABMAAQABAAEAAAAhABQAAQABAAEAAAAiABMAAQABAAEAAAAiABQAAQABAAEAAAA=")
tile_set = ExtResource("1_fsom3")

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
position = Vector2(632, 48)
texture = ExtResource("2_0ebjn")

[node name="MainMenu" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -52.0
offset_right = 72.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="MainMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
mouse_filter = 2
text = "Run"

[node name="OptionsButton" type="Button" parent="MainMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
mouse_filter = 2
text = "Options"

[node name="CreditsButton" type="Button" parent="MainMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
mouse_filter = 2
text = "Credits
"

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(80, 176)
sprite_frames = ExtResource("3_ob46e")
animation = &"walk"
autoplay = "walk"
frame_progress = 0.0778715

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_wem23")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_wem23")
autoplay = true

[node name="CreditsContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="CreditsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CreditsContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="CreditsText" type="RichTextLabel" parent="CreditsContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "by Overkane

Additional credits:
\"surpass your limits!\" Preston Peak (https://opengameart.org/)
Licensed under Creative Commons: By Attribution 4.0 License
http://creativecommons.org/licenses/by/4.0/"

[node name="MarginContainer" type="MarginContainer" parent="CreditsContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="CreditsBackButton" type="Button" parent="CreditsContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
text = "Back"

[node name="OptionsContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="OptionsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="OptionsContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MasterSliderLabel" type="Label" parent="OptionsContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "Master"

[node name="MasterSlider" type="HSlider" parent="OptionsContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05

[node name="HBoxContainer2" type="HBoxContainer" parent="OptionsContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MusicSliderLabel" type="Label" parent="OptionsContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "Audio"

[node name="MusicSlider" type="HSlider" parent="OptionsContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
max_value = 1.0
step = 0.05

[node name="HBoxContainer3" type="HBoxContainer" parent="OptionsContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AudioSliderLabel" type="Label" parent="OptionsContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="OptionsContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.05

[node name="CenterContainer" type="CenterContainer" parent="OptionsContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="OptionsContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="OptionsBackButton" type="Button" parent="OptionsContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
text = "Back"
